tests/type-check/good/polymorphic-type-alias-application.arr
type Id<T> = T

fun f<T>(x :: Id<T>) -> T:
  x
end
