tests/type-check/bad/test-is.arr
fun func() -> Number:
  0
where:
  func() is false
end